# DIP-OpenCV

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
image/: barbara.tif  checkerboard512-shaded.tif  hidden-symbols.tif  text-touching-border-half.tif
include/: color_process.h  common.h  example.h  feature_detection.h  frequency_filter.h  gray_transform.h  head.h  image_noise.h  image_segmentation.h  morphological.h  other_application.h  spatial_filter.h  wavelet_transform.h
src/: color_process.cpp  common.cpp  example.cpp  feature_detection.cpp  frequency_filter.cpp  gray_transform.cpp  image_noise.cpp  image_segmentation.cpp  morphological.cpp  other_application.cpp  spatial_filter.cpp  wavelet_transform.cpp
tools/: FileEnumerator.hpp  Stopwatch.hpp  logger.hpp
